syntax = "proto3";

package microTest;
option go_package = "helloworld/message";

service Greeter {
    rpc Hello (Request) returns (Response) {
    }
}

message Request {
    string name = 1;
}

message Response {
    string greeting = 2;
}