syntax="proto3";


package ralap;

message RalapRequest{
    string name=1;
}

message RalapResponse{
    string name=1;
    int64 age=2;
    repeated string hobby=3;
}


service RespInfo{
    rpc RespInfo (RalapRequest) returns (RalapResponse){};
}